<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_list"
        android:icon="@drawable/ic_fav"
        android:title="@string/title_list" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_shop"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_userdata"
        android:icon="@drawable/ic_user"
        android:title="@string/title_userdata" />

</menu>